--- a/pug/body-header.pug
+++ b/pug/body-header.pug
@@ -1,3 +1,3 @@
-img.portrait(src='/img/portrait.jpg' alt='Portrait of Mice Pápai')
+img.portrait(src='/img/portrait.webp' alt='Portrait of Mice Pápai')
 h1.title
   | Mice Pápai
