--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,6 +1,8 @@
 include mixin/anchor.pug
 include mixin/tooltip.pug
 include mixin/blanka.pug
+include mixin/clickie.pug
+include mixin/job.pug
 
 doctype html
 html(lang='en')
