--- a/pug/section/interests.pug
+++ b/pug/section/interests.pug
@@ -1,9 +1,7 @@
 ul
-  li
-    +tooltip('Photography')
-      +blanka('https://www.instagram.com/micepapai/')(style='color: white;')
-        | Analog & Digital
-  li Photomanipulation
-  li Backpacking
-  li Fine arts
+  li Photography
+    +clickie('https://instagram.com/micepapai/')
   li Music
+    +clickie('https://www.discogs.com/label/1034874-PLUTO-Sound')
+  li Fine arts
+  li Backpacking
