--- a/pug/section/work.pug
+++ b/pug/section/work.pug
@@ -1,15 +1,16 @@
 ul
   li 
-    +tooltip('Vacuumlabs (2019-)')
-      | Node/React Full-Stack Developer
+    +job('Vacuumlabs (2019-)', 'Node/React Full-Stack Developer', 'vacuum')
+      include /projects/crypto-wallet.pug
+
   li 
-    +tooltip('RoadRecord (2018-2019)')
-      | Python Backend Developer
+    +job('RoadRecord (2018-2019)', 'Python Backend Developer', 'roadrecord')
+      | lorem ipsum
   li 
-    +tooltip('Endless Flux Labs (2018)')
-      | PHP/JS Full-Stack Developer
+    +job('Endless Flux Labs (2018)', 'PHP/JS Full-Stack Developer', 'endlessflux')
+      | lorem ipsum
   li 
-    +tooltip('Freelance projects (2015-2018)')
-      | Various 1-2 week long projects
+    +job('Freelance projects (2015-2018)', 'Short projects in Python, Java and R', 'freelance')
+      | lorem
       br
-      | mostly in Python, Java and R
+      | ipsum
