--- a/pug/section/skills.pug
+++ b/pug/section/skills.pug
@@ -3,15 +3,13 @@ ul
   li Python
   li Typescript
   li React
-  li Django
-  li Sass
+  li CSS
 
 h3 Comfortable
 ul
   li SQL
   li PHP
   li Rust
-  li Java
   li Clojure
   
 
