--- a/pug/head.pug
+++ b/pug/head.pug
@@ -3,7 +3,7 @@ meta(name='viewport', content='width=device-width, initial-scale=1')
 meta(name='revised', content=revised)
 meta(name='revision', content=revision)
 meta(name='revisit-after', content='30 days')
-meta(name='subject', content='Mice Pápai - Software Engineer - CV / Resume')
+meta(name='subject', content='Mice Pápai - Software Developer - CV / Resume')
 meta(name='author', content='Mice Pápai, ' + email)
 meta(name='reply-to', content=email)
 
@@ -12,4 +12,3 @@ meta(name='reply-to', content=email)
 title Mice Pápai - Software Developer
 
 include partial/favicons.pug
-//- include partial/includes.pug
