--- a/pug/partial/favicons.pug
+++ b/pug/partial/favicons.pug
@@ -1,4 +1,4 @@
-link(rel='stylesheet', type='text/css', href='css/q.min.css?v2')
+link(rel='stylesheet', type='text/css', href=cssPath)
 link(rel='apple-touch-icon', sizes='57x57', href='img/favicon/apple-icon-57x57.png')
 link(rel='apple-touch-icon', sizes='60x60', href='img/favicon/apple-icon-60x60.png')
 link(rel='apple-touch-icon', sizes='72x72', href='img/favicon/apple-icon-72x72.png')
@@ -13,6 +13,6 @@ link(rel='icon', type='image/png', sizes='32x32', href='img/favicon/favicon-32x3
 link(rel='icon', type='image/png', sizes='96x96', href='img/favicon/favicon-96x96.png')
 link(rel='icon', type='image/png', sizes='16x16', href='img/favicon/favicon-16x16.png')
 link(rel='manifest', href='img/favicon/manifest.json')
-meta(name='msapplication-TileColor', content='#161816')
 meta(name='msapplication-TileImage', content='img/favicon/ms-icon-144x144.png')
-meta(name='theme-color', content='#161816')
+meta(name='msapplication-TileColor', content=themeColor)
+meta(name='theme-color', content=themeColor)
